# ducklake-dataframe

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISCOVERY.md  GAP_ANALYSIS.md  LICENSE  PLAN.md  README.md  V1_5_MIGRATION.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: README.md  bench_backends.py  bench_catalog.py  bench_catalog_overhead.py  bench_dml.py  bench_read_write.py  bench_schema_evolution.py
docs/: api.md
examples/: tutorial.ipynb  tutorial.py  tutorial_pyspark.ipynb  tutorial_pyspark.py
src/ducklake_core/: __init__.py  _backend.py  _bootstrap.py  _catalog.py  _catalog_api.py  _exceptions.py  _schema.py  _storage.py  _union.py  _writer.py
src/ducklake_pandas/: __init__.py  _writer.py
src/ducklake_polars/: __init__.py  _backend.py  _catalog.py  (+4 more)
tests/: conftest.py  test_backend.py  test_basic.py  test_bootstrap.py  test_catalog_inspection.py  test_concurrent.py  test_constraints.py  test_delete.py  test_deletion_inlining.py  test_field_id_mapping.py  test_interop.py  test_interop_compaction.py  test_pandas_parity.py  test_partition.py  test_pyspark.py  test_pyspark_ddl.py  test_schema_case.py  test_schema_evolution.py  test_schema_mapping.py  test_schemas.py  test_time_travel.py  test_transactions.py  test_type_coverage.py  test_types.py  test_union_types.py  test_write_alter.py  test_write_inline.py  test_write_partition.py
tests_pandas/: test_basic.py  test_catalog_general.py  test_inlined.py  test_partition.py  test_schema_evolution.py  test_types.py  test_write_alter.py  test_write_inline.py  test_write_update.py
